# Languages

./: README.md
bash/scripts/: poem.txt
batch/: addition1.bat  addition2.bat  attrib.bat  auto_login.bat  autoexec1.bat  autoexec2.bat  autoexec3.bat  autotime.bat  close_window.bat  conditional_shutdown.bat  control.txt  copy_con.bat  ctty_nul.bat  date_info.bat  delete_previous_gtr10.bat  escaped_characters1.bat  escaped_characters2.bat  excel_macros.bat  find_ipaddress.bat  ftp.bat  helloworld.bat  hosts_expired.bat  hosts_remove.bat  ifexists.bat  info.txt  info_sendkeys.txt  keep_10newest.bat  log.txt  login.bat  myserver.bat  noenvironment.bat  ntinput.bat  peek_networksecscan.bat  ping_waitfor.bat  press_key_automation.bat  process_list.bat  quotes1.bat  quotes2.bat  random_number.bat  reboot.bat  (+7 more)
batch/dvd2phone/: dvd2phone.bat
batch/examples/: test_pause_dir.bat  timed_intervals.bat
batch/install/: Flash.bat  Java.bat  RegTweaks.reg  booot.ini  ie7.bat  norton.bat  office.bat  reg.bat  shockwave.bat
batch/registry/: CurrentUser.bat  ExchangeLogonDomain.bat  ExchangeUserName.bat  LocalComputerName.bat  NetworkLogon.bat  SecurityContainer.bat  VnetsupComputerName.bat  VnetsupWorkgroup.bat  WindowsRegisteredOwner.bat  registry_help.txt
c/: no_interpret_ip_loop.c
c/CPrograms/: areaofsquare.c  iploop.c
cpp/AtNow/: Script1.rc  atnow.dsp  atnow.dsw  atnow.opt  atnow.plg  help1.txt  main.cpp  main.h  resource.h
cpp/AutoHotKey/: ahkfunctionV.cpp
cpp/ContentAdvisor/: Script1.rc  conadvpass.dsp  conadvpass.dsw  main.cpp  main.manifest  readme.txt
cpp/Drizzle/: ChangeLog  Makefile.in  aclocal.m4  config.h.in  configure
cpp/ExeInfo/: Script1.rc  exeinfo.dsp  exeinfo.dsw  exeinfo.opt  exeinfo.plg  main.h  resource.h
cpp/SilentStart/: readme.txt  runsilent_code.txt
cpp/WinExplorer/: GENERAL.CPP  GENERAL.H  MAIN.CPP  MAIN.H  OPTIONS.CPP  Script1.rc  about.cpp  about.h  einexp.opt  idd_hand.cur  options.h  resource.h  tabs.cpp  tabs.h  winexp.001  winexp.dsp  winexp.dsw  winexp.mdp  winexp.opt  winexp.plg
css/: better_email_links.htm  shiny_buttons.htm  wund_iphone.htm
css/better_email_links_files/: bsa.js  s_3469a2a501a9e18091036aa0c89f9dcb.js  style.css
css/flexbox/: form.html
css/videoimginfo_opacity/: videoimginfo_opacity.htm
css/wund_iphone_files/: autocomplete.js  geolocation.js
html/: devtools.html  dtd_custom.txt  dtd_html4loose.txt  html_conditionals.html  javascript_css_relationship.txt  numbered-input-boxes.htm  static_dynamic_versions.txt  unicode_class_names.htm  weekly_progress_chart.htm
html/css-fluid-layout/: 3-pane.html  4-pane-1.html  4-pane-2.html  4-pane-3.html  4-pane-4.html  4-pane-5.html  4-pane-6.html
html/layouts/: CSS Layout 1.html  CSS Layout 2.html  CSS Layout 4.html  CSS Layout 5.html  CSS Layout 6.html  CSS Layout 7.html  CSS Layout 8.html
html/responsive_web_design/: index.html
html/stretched_background_image/: html_stretch_background_image.html
html/tictactoe/: tictactoe.html  tictactoe.swf
idk/: passhack.mrc
js/ajax_photogallery/: index.html  slide_backup.js  style.css
js/calculator/: index.htm  script.js  style.css
js/countdown/: countdown.html
js/ecma5_strict/: echoBrowser.js  index.html
js/emaillinks_viewsource/: index.htm  style.css
js/examples/: 3d-engine.js  ad_api.js  ajax-json-menu.json  ajax.js  ajaxformsubmission.htm  ajaxsubmitform.htm  ajaxsubmitform.js  ajaxsubmitform2.js  arguments_assocarray.js  array_dump.js  array_unique.js  autoresize_textarea.js  benchmark_test.js  boolean.js  capitalize_first_letter.js  clickjacking.txt  compressjs.js  css_popup_demo.htm  datefunction_leapyear.html  document_location_match.js  dos_me.txt  drag_columns_rows.htm  dragresize-org.js  dragresize.htm  dragresize.js  dynamic_javascript.js  encryption.js  examples-test.js  examples.js  examples2.js  favicon_generator.htm  form_validate.htm  foxnews.htm  getelementsbyclassname.js  goom_include.js  grid_mousexy.html  javascript_table_search.htm  jquery_autocomplete_plugin.htm  jquery_ishovered_plugin.htm  js1.7_let.html  (+27 more)
js/fancy_zoom/: common.css  fancyzoom.htm
js/hacks/: hack.php  hack2.php
js/htmlbox/: History.txt  MIT License.txt  README.txt  demo_full.html  demo_small.html  htmlbox.styles.js  htmlbox.syntax.js  xhtml.js
js/iploop/: iprouting.txt
js/json/: XMLtoJSON.js  json.parse.js  json2html.js  json_examples.htm  json_menu_demo.htm  json_nice.js  json_response.txt
js/monitter/: config.js  lowpro.jquery.js  main.js  mod_api_gc.js  monitter.html  monitter5.js  tab.js
js/orientation/: LICENSE  README.md  arrow.psd  image.html  index.html  map.html  mootools-core.js  mootools-more.js  motion.html  orientation.html  perspective.html  style.css
js/other/: bingo.htm  key_movement.html
js/parsers/: parseini.html  parseini.js
js/passwordProtection/: VirgenereEncryptionOriginal.js  slideEncryption.js  slideEncryptionBackup1.js  slideEncryptionOriginal.js
js/puredom/: pureDOM.js
js/querystring/: query1.html  query2.html  query3.html  stringify_examples.js
js/scope/: simple_multiply_call_apply_bind.js  simple_scope_examples.js
js/scroll/: jquery_horizontal_scroller.html  (+3 more)
macros/: CoD4 FullAuto Updates.ahk  CoD4 FullAuto.ahk  Sniff.ahk
perl/: Dice-Road-Dictionary-Generator.pl  checkpass.pl  declaring_variables.pl  variable_substitution.pl
php/: RewriteEngine.txt
php/build_php/crawl/: Makefile.am  Makefile.in  acconfig.h  atomicio.c  basename.c  cfg.c  cfg.h  config.h.in  configure  configure.in  connection.c  connection.h  crawl.1  crawl.c  crawl.conf  crawldb.c  crawldb.h  dns.c  dns.h  getaddrinfo.c  html.c  html.h  http.c  http.h  robots.c  robots.h  strlcat.c  strlcpy.c  tree.h  util.c  util.h
php/build_php/crawl/compat/: gai-errnos.h  getaddrinfo.h
psp/: INTERNET RADIO PLAYER I.htm  INTERNET RADIO PLAYER II.htm
python/: declaring_variables.py  variable_substitution.py  variable_substitution2.py
socialapis/: social_buttons.html
src/: Notepad.txt
vbscript/: autohotkey.vbs
wikipedia/: opendesktop.txt  ytinstant.txt
xml/: newDocObject.js  text2xml.js
(+4137 files in other folders)
